# bchlib

./: Cargo.toml  README.md  build.rs  wrapper.h
bchlib/: Cargo.toml  README.md
bchlib-sys/: .gitignore  Cargo.toml  README.md  build.rs
bchlib-sys/src/: lib.rs
bchlib-sys/src/bch/: bch.c  bch.h
bchlib/src/: lib.rs
src/: lib.rs
src/bch/: bch
